--- a/README
+++ b/README
@@ -30,16 +30,7 @@ used to demonstrate its capability.
 ---------------------------
 Ubuntu Package Dependencies
 ---------------------------
-make
-gcc 
-g++
-libnuma-dev
-tinyxml-dev
-libboost-dev
-libboost-thread-dev
-libboost-system-dev
-libboost-program-options-dev
-libboost-filesystem-dev
+sudo apt-get install make gcc g++ libnuma-dev libtinyxml-dev libboost-dev libboost-thread-dev libboost-system-dev libboost-program-options-dev libboost-filesystem-dev
 
 
 -------------
